// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewTagForm component Should render the component with the english locale 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "margin": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Add a tag
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "margin": 5,
        "marginBottom": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 4,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 5,
          }
        }
      >
        <View
          style={
            Object {
              "minWidth": 50,
            }
          }
        >
          <Text>
            Label
            :
          </Text>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eeeeee",
              "borderRadius": 2,
              "flex": 1,
              "marginLeft": 5,
              "paddingLeft": 5,
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            defaultValue=""
            onChangeText={[Function]}
            rejectResponderTermination={true}
            style={
              Object {
                "fontSize": 16,
                "height": 32,
              }
            }
            underlineColorAndroid="transparent"
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "marginLeft": 5,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityStates={
          Array [
            "disabled",
          ]
        }
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            disabled={true}
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "padding": 8,
                  "textAlign": "center",
                },
                Object {
                  "color": "#cdcdcd",
                },
              ]
            }
          >
            Submit
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`NewTagForm component Should render the component with the french locale 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "margin": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Créer une étiquette
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "margin": 5,
        "marginBottom": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 4,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 5,
          }
        }
      >
        <View
          style={
            Object {
              "minWidth": 50,
            }
          }
        >
          <Text>
            Label
            :
          </Text>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#eeeeee",
              "borderRadius": 2,
              "flex": 1,
              "marginLeft": 5,
              "paddingLeft": 5,
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            defaultValue=""
            onChangeText={[Function]}
            rejectResponderTermination={true}
            style={
              Object {
                "fontSize": 16,
                "height": 32,
              }
            }
            underlineColorAndroid="transparent"
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "marginLeft": 5,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityStates={
          Array [
            "disabled",
          ]
        }
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            disabled={true}
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "padding": 8,
                  "textAlign": "center",
                },
                Object {
                  "color": "#cdcdcd",
                },
              ]
            }
          >
            Valider
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
